# opengl-glew

./: .gitignore  CLAUDE.md  CMakeLists.txt  build.ps1  build.sh  readme.md
.github/workflows/: build.yml
src/: main.cpp  math.hpp
src/shaders/: fragment.glsl  vertex.glsl
tests/: CMakeLists.txt  test_math.cpp
